# phoenix

./: .env.example  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  astro.config.mjs  docker-compose.yml  eslint.config.js  package-lock.json  package.json  start.sh  tsconfig.json
.github/workflows/: ci.yml
agent/: .env.example  Dockerfile  agent.py  app.py  config.py  db.py  models.py  pyproject.toml  registry.py  semantic_server.py  server.py
agent/native_skills/: README.md  SKILL_TEMPLATE.md  __init__.py
agent/routes/: movements.py  notes.py  refine.py  repos.py  runs.py  worktree.py
agent/tests/: test_agent_utils.py  test_app.py  test_db.py  test_models.py
src/: ARCHITECTURE.md  env.d.ts
src/components/: AgentRail.astro  AgentsPanel.astro  AppHeader.astro  BoardToolbar.astro  CodingAgentModal.astro  IssueDrawer.astro  NewIssueModal.astro  PlanningPanel.astro  RunHistoryPanel.astro  SettingsPanel.astro  Sidebar.astro  TeamsPanel.astro  TokenModal.astro
src/components/islands/: AgentRail.tsx  AgentsPanel.tsx  IssueDrawer.tsx  PlanningPanel.tsx  RunHistoryPanel.tsx  TeamsPanel.tsx
src/lib/: agents.js  board.js  column-mapper.js  config.js  constants.js  event-bus.js  favicon.js  formatters.js  github-api.js  implementer.js  local-issues.js  semantic.js  signals.js
src/pages/: index.astro
src/scripts/: agent-rail.js  agents-panel.js  board-loader.js  drawer.js  main.js  planning.js  run-dispatcher.js  run-history-panel.js  state.js  teams-panel.js  token-repo.js
src/styles/: global.css
